# Agents-ADK

./: .env  .gitignore  Procfile  duce.txt  main.py  mongo.py  mvp_notebook.ipynb  readme.md  requirements.txt  run_line  server.py
DOCS/Foto_gattini/: alessandro.txt  asburgo.csv
MCP_server/: server.py
PDF/Pap/: Khabib.txt
PDF/Pap/Prova/: How_LLMs_Work.pptx
agent/: agent.py
backend_fastapi/: main.py
frontend/src/: App.css  App.jsx  index.css
mcp-server-template/: .gitignore  README.md  potato_recipes.txt  pyproject.toml  rock_eating_guide.txt
mcp-server-template/src/mcp_server_template/: app.py  config.py  logging_config.py  schemas.py  server.py  state.py
mcp-server-template/src/mcp_server_template/prompts/: __init__.py  example_prompts.py
mcp-server-template/src/mcp_server_template/resources/: __init__.py  quest_resources.py  system_resources.py
mcp-server-template/src/mcp_server_template/tools/: __init__.py  advanced_tools.py  core_tools.py  image_tools.py  interactive_tools.py  quest_tools.py  stateful_tools.py  utility_tools.py
mcp-server-template/src/mcp_server_template/utils/: error_handler.py
mcp-server-template/tests/: test_advanced_tools.py  test_core_tools.py  test_interactive_tools.py  test_quest.py
research_agent/: .env  agent.py
utils/: mongo.py  rag.py
